Generate github.io page

--- a/forcedSpring.html
+++ b/forcedSpring.html
@@ -17,7 +17,7 @@
     <a href="https://github.com/reaperes/PhysicsEngine.git">View source code on Github</a>
   </article>
   <nav id="npmenu-simulation-list">
-    <a class="hoverable" href="pendulum.html">Pendulum</a>
+    <a class="hoverable" href="index.html">Pendulum</a>
     <a class="hoverable" href="spring.html">Spring</a>
     <a class="hoverable" href="collision2d.html">Collision2d</a>
     <a class="hoverable" href="pendulumCollision.html">Pendulum Collision</a>
@@ -56,19 +56,29 @@
 <script type="text/javascript">
   var c = document.getElementById("canvas");
   var engine = new NPEngine(c);
-  var pendulum = new NPEngine.Pendulum({
-    mass: 10,
-    lineLength: 2,
-    theta0: 30
+  var grid = new NPEngine.Grid;
+  var motion = new NPEngine.ForcedSpring({
+    k: 100,
+    mu: 0,
+    mass: 2,
+    blockX0: 0.1,
+    f0: 20,
+    frequency: 0.5,
+    phase: 3.141592
   });
-  engine.addDisplayObject(pendulum);
+  engine.setGrid(grid);
+  engine.addDisplayObject(motion);
   engine.ready();
 
   // default value
   var DefaultValue = function () {
-    this.mass = 10;
-    this.lineLength = 2;
-    this.theta0 = 30;
+    this.k = 100;
+    this.mu = 0;
+    this.mass = 2;
+    this.blockX0 = 0.1;
+    this.f0 = 20;
+    this.frequency = 0.5;
+    this.phase = 3.141592;
   };
 
   window.onload = function () {
@@ -76,32 +86,32 @@
     var gui = new dat.GUI({autoPlace: false});
     document.getElementById('gui-container').appendChild(gui.domElement);
 
-    var massFolder = gui.addFolder('질량 (Kg)');
-    massFolder.open();
-    var mass = massFolder.add(defaultValue, 'mass');
-    mass.onChange(function (value) {
-      engine.stop();
-      pendulum.setVariables({mass: value});
-      engine.ready();
-    });
+    var kFolder = gui.addFolder('탄성 계수 (N/m)');
+    kFolder.open();
+    setController(kFolder, 'k');
 
-    var lengthFolder = gui.addFolder('선 길이 (m)');
-    lengthFolder.open();
-    var length = lengthFolder.add(defaultValue, 'lineLength');
-    length.onChange(function (value) {
-      engine.stop();
-      pendulum.setVariables({lineLength: Math.round(value)});
-      engine.ready();
-    });
+    var muFolder = gui.addFolder('마찰 계수 (N s/m)');
+    muFolder.open();
+    setController(muFolder, 'mu');
 
-    var thetaFolder = gui.addFolder('초기 각도 (degree)');
-    thetaFolder.open();
-    var theta0 = thetaFolder.add(defaultValue, 'theta0', -90, 90);
-    theta0.onChange(function (value) {
-      engine.stop();
-      pendulum.setVariables({theta0: Math.round(value)});
-      engine.ready();
-    });
+    var blockFolder = gui.addFolder('블록 설정');
+    blockFolder.open();
+    setController(blockFolder, 'mass');
+    setController(blockFolder, 'blockX0');
+    setController(blockFolder, 'f0');
+    setController(blockFolder, 'frequency');
+    setController(blockFolder, 'phase');
+
+    function setController(guiFolder, variable) {
+      var gui = guiFolder.add(defaultValue, variable);
+      gui.onFinishChange(function (value) {
+        var option = {};
+        option[variable.toString()] = value;
+        engine.stop();
+        motion.setVariables(option);
+        engine.ready();
+      });
+    }
   };
 </script>
 </body>
