--- a/pendulumCollision.html
+++ b/pendulumCollision.html
@@ -17,7 +17,7 @@
     <a href="https://github.com/reaperes/PhysicsEngine.git">View source code on Github</a>
   </article>
   <nav id="npmenu-simulation-list">
-    <a class="hoverable" href="pendulum.html">Pendulum</a>
+    <a class="hoverable" href="index.html">Pendulum</a>
     <a class="hoverable" href="spring.html">Spring</a>
     <a class="hoverable" href="collision2d.html">Collision2d</a>
     <a class="hoverable" href="pendulumCollision.html">Pendulum Collision</a>
@@ -56,25 +56,20 @@
 <script type="text/javascript">
   var c = document.getElementById("canvas");
   var engine = new NPEngine(c);
-  var grid = new NPEngine.QuadrantGrid;
-  var motion = new NPEngine.ParabolicMotion({
-    gravity: 9.8,
-    mu: 0,
-    mass: 1,
-    theta: 45,
-    velocity: 60
+  var collision = new NPEngine.PendulumCollision({
+    k: 1000000,
+    mu: 10,
+    theta1: 0,
+    theta2: 45
   });
-  engine.setGrid(grid);
-  engine.addDisplayObject(motion);
+  engine.addDisplayObject(collision);
   engine.ready();
 
   // default value
   var DefaultValue = function () {
-    this.gravity = 9.8;
-    this.mu = 0;
-    this.mass = 1;
-    this.theta = 45;
-    this.velocity = 60;
+    this.k = 1000000;
+    this.theta1 = 0;
+    this.theta2 = 45;
   };
 
   window.onload = function () {
@@ -82,29 +77,26 @@
     var gui = new dat.GUI({autoPlace: false});
     document.getElementById('gui-container').appendChild(gui.domElement);
 
-    var muFolder = gui.addFolder('마찰 계수');
+    var muFolder = gui.addFolder('탄성 계수 (N/m)');
     muFolder.open();
-    setController(muFolder, 'mu');
+    setController(muFolder, 'k', {Rigid:1000000, Flexible:10000});
 
-    var massFolder = gui.addFolder('질량 (kg)');
-    massFolder.open();
-    setController(massFolder, 'mass');
+    var ball1Folder = gui.addFolder('공 1');
+    ball1Folder.open();
+    setController(ball1Folder, 'theta1');
 
-    var thetaFolder = gui.addFolder('입사 각도');
-    thetaFolder.open();
-    setController(thetaFolder, 'theta');
+    var ball2Folder = gui.addFolder('공 2');
+    ball2Folder.open();
+    setController(ball2Folder, 'theta2');
 
-    var velocityFolder = gui.addFolder('입사 속도');
-    velocityFolder.open();
-    setController(velocityFolder, 'velocity');
-
-    function setController(guiFolder, variable) {
-      var gui = guiFolder.add(defaultValue, variable);
+    function setController(guiFolder, variable, list) {
+      var gui = guiFolder.add(defaultValue, variable, list);
       gui.onFinishChange(function (value) {
         var option = {};
         option[variable.toString()] = value;
+
         engine.stop();
-        motion.setVariables(option);
+        collision.setVariables(option);
         engine.ready();
       });
     }
