--- a/rotationPlus.html
+++ b/rotationPlus.html
@@ -17,7 +17,7 @@
     <a href="https://github.com/reaperes/PhysicsEngine.git">View source code on Github</a>
   </article>
   <nav id="npmenu-simulation-list">
-    <a class="hoverable" href="pendulum.html">Pendulum</a>
+    <a class="hoverable" href="index.html">Pendulum</a>
     <a class="hoverable" href="spring.html">Spring</a>
     <a class="hoverable" href="collision2d.html">Collision2d</a>
     <a class="hoverable" href="pendulumCollision.html">Pendulum Collision</a>
